--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,6 +26,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci --prefix Code/Server
     - run: npm run build --prefix Code/Server --if-present
-    - run: npm test --prefix Code/Server server.js
+    - run: npm test --prefix Code/Server
       env:
         CI: true
