--- a/Code/Server/package.json
+++ b/Code/Server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -15,7 +15,7 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "mocha": "^7.1.1",
+    "jest": "^25.2.2",
     "nodemon": "^2.0.2"
   }
 }
